# StepCast

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  editor.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cursor/commands/: pr-review.md
.githooks/: pre-commit.sh  pre-push.sh
.github/: release.yml
.github/workflows/: ci.yml  codex-feedback-loop.yml  publish.yml
docs/: breadcrumbs.md  choices.md  step-editor-design-spec.md
docs/archive/: 2026-02-03-panel-code-quality-fixes.md  2026-02-03-task5-storage.md  2026-02-03-task8-export-render.md  2026-02-04-debug-logging-design.md  2026-02-06-export-refactor-design.md
docs/plans/: 2026-02-02-recorder-state-quality.md  2026-02-02-recorder-test-gate.md  2026-02-02-stepcast-design.md  2026-02-02-stepcast-implementation-plan.md  2026-02-03-core-recording-functionality.md  2026-02-03-core-recording-implementation.md  2026-02-03-panel-ui-redesign.md  2026-02-03-task-7-code-quality.md  2026-02-03-task8-export-render.md
docs/specs/: 2026-02-02-recorder-test-gate.md  2026-02-02-task1-fix-spec-gaps.md  2026-02-02-task1-stepcast.md  2026-02-02-task3-recorder-state.md  2026-02-03-task4-code-quality.md  2026-02-03-task7-menu-bar-panel.md  2026-02-08-startup-ux.md  2026-02-08-whatsapp-gif-picker-tracking.md  2026-02-09-apple-intelligence-descriptions-toggle.md  2026-02-12-ai-grounding-debug-telemetry.md  2026-02-12-preclick-screencapturekit-buffer.md  2026-02-13-editor-crop-drag-performance.md  2026-02-13-editor-crop-visibility-fix.md  2026-02-13-step-crop-focus-system.md  2026-02-14-pre-push-coverage-gate.md  2026-02-16-apple-intelligence-i18n-phase3.md  2026-02-16-backend-i18n-phase2.md  2026-02-16-codex-feedback-loop.md  (+5 more)
scripts/: build.sh  check-i18n.js  diagnose_screen_permission.swift  session-ai-report.js  sync-version.js
src/: App.css  App.test.tsx  App.tsx  editor.css  editor.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  embedded.provisionprofile  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: check_permissions.toml  delete_step.toml  discard_recording.toml  dismiss_whats_new.toml  export_guide.toml  generate_step_descriptions.toml  get_apple_intelligence_eligibility.toml  get_startup_state.toml  get_steps.toml  greet.toml  mark_startup_seen.toml  open_editor_window.toml  pause_recording.toml  reorder_steps.toml  request_accessibility.toml  request_permissions.toml  request_screen_recording.toml  resume_recording.toml  start_recording.toml  stop_recording.toml  update_step_crop.toml  update_step_description.toml  update_step_note.toml
src-tauri/src/: i18n.rs  lib.rs  main.rs  panel.rs  startup_state.rs  tray.rs
src-tauri/src/apple_intelligence/: mod.rs
src-tauri/src/export/: helpers.rs  html.rs  markdown.rs  mod.rs  pdf.rs
src-tauri/src/recorder/: ax_helpers.rs  capture.rs  cg_capture.rs  click_event.rs  click_listener.rs  macos_screencapture.rs  mod.rs  pipeline.rs  pre_click_buffer.rs  session.rs  state.rs  storage.rs  types.rs  window_info.rs
src-tauri/src/recorder/pipeline/: helpers.rs  mod.rs  types.rs
src-tauri/src/recorder/window_info/: auth.rs  mod.rs  query.rs  topmost.rs  types.rs
src-tauri/swift/: stepcast_ai_helper.swift  stepcast_ai_helper_descriptions.swift  stepcast_ai_helper_vision.swift
src-tauri/tests/: cg_capture_window_options.rs  security_config.rs
(+40 files in other folders)
